Source/WebKit/UIProcess/API/glib/WebKitWebContext.cpp
@@ -171,14 +171,14 @@ private:
             return;
 
         GRefPtr<WebKitURISchemeRequest> request = adoptGRef(webkitURISchemeRequestCreate(m_context, page, task));
-        auto addResult = m_requests.add(task.identifier(), WTFMove(request));
+        auto addResult = m_requests.add({ task.resourceLoaderID(), task.pageProxyID() }, WTFMove(request));
         ASSERT(addResult.isNewEntry);
         m_callback(addResult.iterator->value.get(), m_userData);
     }
 
     void platformStopTask(WebPageProxy&, WebURLSchemeTask& task) final
     {
-        auto it = m_requests.find(task.identifier());
+        auto it = m_requests.find({ task.resourceLoaderID(), task.pageProxyID() });
         if (it == m_requests.end())
             return;
 
@@ -188,14 +188,14 @@ private:
 
     void platformTaskCompleted(WebURLSchemeTask& task) final
     {
-        m_requests.remove(task.identifier());
+        m_requests.remove({ task.resourceLoaderID(), task.pageProxyID() });
     }
 
     WebKitWebContext* m_context { nullptr };
     WebKitURISchemeRequestCallback m_callback { nullptr };
     void* m_userData { nullptr };
     GDestroyNotify m_destroyNotify { nullptr };
-    HashMap<WebCore::ResourceLoaderIdentifier, GRefPtr<WebKitURISchemeRequest>> m_requests;
+    HashMap<std::pair<WebCore::ResourceLoaderIdentifier, WebPageProxyIdentifier>, GRefPtr<WebKitURISchemeRequest>> m_requests;
 };
 
 typedef HashMap<String, RefPtr<WebKitURISchemeHandler> > URISchemeHandlerMap;
